cabal-version:      3.4
name:               jolharg-web
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Server.Auth
    Server.User
    Server.Users

  -- other-extensions:
  build-depends:
    , base                      >=4.20.0.0 && <5
    , bcrypt
    , jolharg-api-types
    , jolharg-database
    , jolharg-emails
    , jolharg-servant-examples
    , jolharg-web-database
    , jolharg-web-models
    , jolharg-web-types
    , mtl
    , servant-auth-server
    , servant-server
    , text
    , uuid

  -- , haveibeenpwned
  -- , time
  -- , transformers
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite jolharg-web-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  main-is:            Spec.hs
  ghc-options:
    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations
  build-depends:
    , base   >=4.20.0.0 && <5
    , hspec
  -- , jolharg-web
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
