cabal-version:      3.4
name:               jolharg-web
version:            0.2.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Server.Auth
    Server.User
    Server.Users

  -- other-extensions:
  build-depends:
    , base                      ^>=4.20.0.0
    , bcrypt                    ^>=0.0.11
    , jolharg-api-types         ^>=0.2.0.0
    , jolharg-database          ^>=0.2.0.0
    , jolharg-emails            ^>=0.2.0.0
    , jolharg-servant-examples  ^>=0.2.0.0
    , jolharg-web-database      ^>=0.2.0.0
    , jolharg-web-models        ^>=0.2.0.0
    , jolharg-web-types         ^>=0.2.0.0
    , mtl                       ^>=2.3.1
    , servant-auth-server       ^>=0.4.9.0
    , servant-server            ^>=0.20.2
    , text                      ^>=2.1.2
    , uuid                      ^>=1.3.16

  -- , haveibeenpwned
  -- , time                 ^>=1.14
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite jolharg-web-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs
  ghc-options:
    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations

  build-depends:
    , base   ^>=4.20.0.0
    , hspec  ^>=2.11.10

  -- , jolharg-web
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.15.0.1
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
