cabal-version:      3.14
name:               jolharg-web
version:            0.3.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Server.Auth
    Server.User
    Server.Users
    Types.Instances.User

  -- other-extensions:
  build-depends:
    , base                      ^>=4.22
    , bcrypt                    ^>=0.0.11
    , jolharg-api-types         ^>=0.3
    , jolharg-database          ^>=0.3
    , jolharg-emails            ^>=0.3
    , jolharg-servant-examples  ^>=0.3
    , jolharg-web-database      ^>=0.3
    , jolharg-web-models        ^>=0.3
    , jolharg-web-types         ^>=0.3
    , mtl                       ^>=2.3.1
    , servant-auth              ^>=0.4.2
    , servant-auth-server       ^>=0.4.9
    , servant-server            ^>=0.20.3
    , text                      ^>=2.1.2
    , uuid                      ^>=1.3.16

  -- , haveibeenpwned
  -- , time                 ^>=1.15
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite jolharg-web-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  build-depends:
    , base   ^>=4.22
    , hspec  ^>=2.11.15

  -- , jolharg-web
  -- , hspec-core ^>=2.11.15
  -- , hspec-expectations ^>=0.8.4
  -- , HUnit
  -- , QuickCheck ^>=2.17
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
